addressing division of labour

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -505,33 +505,13 @@ The use of GDPs to scaffold the ideation process was a common pattern used by X 
 CHECK FOR OVERLAP-->
 
 
-GDPs feature in processes of organisation, prioritisation and division of labour in a variety of ways: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns.
+Addressing division of labour on an interpersonal plane, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. Turning to the use of GDPs specifically in DoL as an organisational strategy, structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour.
 
-
-<!-- The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
-peers. -->
-
+GDPs feature in processes division of labour in a variety of ways: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns.
 
 
 
-
-<!-- The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour. Specifically they are able to avoid waiting for their father and moving different parts of the overall project forward. -->
-
-<!-- LINK TO THE TECHNICAL SECTION. NOT SRE WHY?  -->
-
-
-
-
-**Division of Labour**
-
-
-MOVE TO APPENDIX?
-He appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a _plodding_. At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In an exchange listed in Vignette 4, the child proposes dividing their labour informally, appearing to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a more experimental process. The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour.
-
-
-Addressing division of labour more generally, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. Turning to the use of GDPs specifically in DoL as an organisational strategy,  structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
-
-<!-- Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting. THIS IS EXPLORED IN THE NEXT CHAPTER SO DROP OR ONLY BRIEFLY REFERENCE. -->
+Returning to the example of Mark and Toby from Vignette 3, Mark appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a _plodding_. At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In an exchange listed in Vignette 4, the child proposes dividing their labour informally, appearing to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a more experimental process. The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour.
 
 Analysis of video data uncovered flexible way in which the participant divided the process of game making, often showing traces of home collaboration practices. For example, In vignette 2, Suzanna(p) and Olivia(c) relied on the parent to do the majority of code implementation and shared one computer. The pair also alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent notes _"I resist the urge to fix things immediately when she struggles."_ In an illuminating exchange, Olivia uses the name of a GDP within a request for her parent to take on a specific task within their making process.
 
@@ -551,6 +531,20 @@ While in P2 when supported by grandparents Toby had worked mostly alone, in P3, 
 
     I try never to touch the keyboard of who's there. If they are stuck on something I always tell them what to do. Even if it's then taken me five minutes to explain what a semicolon is. And point. _It's that key_. Because it was just, I could do it so effortlessly. I think I'm sure I put people off very quickly by "Dan did something really quickly. I don't know what it was.".
 
+In the second part of vignette 7, Dan(p) outlines a similar approach to Suzanna(p) in resisting _jumping in_. "I try never to touch the keyboard of who's there. If they are stuck on something I always tell them what to do." This approach is  guided influenced by Dan's experience as a software engineer and volunteer at Coder Dojo (see glossary). In the first part of Vignette 7, Dan(p) shift the kind of helping role as he progresses through different stages of applying a GDP. MORE DETAIL?
+
+In Vignette 5, Molly continues to do solo design using the Piskel graphical too. She encounters a design problem. When erasing a part of the design she gets rid of background colour. Molly asks for help from partner but receives misleading advice which does not help her progress.
+
+Molly:  Oh no it’s not done that has it?
+Molly calls the name of her child across room with theatrical gesture and loud whisper voice
+Molly: “Nadine !”
+Molly then makes face, wiggles head and shrugs at parent peer. The other parent laughs.
+Nadine arrives to help.
+
+    <!-- The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
+    peers. -->
+
+    <!-- Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting. THIS IS EXPLORED IN THE NEXT CHAPTER SO DROP OR ONLY BRIEFLY REFERENCE. -->
 
 ### Discussion on division of labour in the video data
 
@@ -565,17 +559,7 @@ While these examples involve GDPs others are explore in relation to development 
 
 The variety of repertoires of helping practice depends in part on the different funds of knowledge the parent has access to. Toby and Dan's pair process  is more guided and focused than many other participants and includes accessing professional documentation and exploration of computational thinking concepts.
 
-In the second part of vignette 7, Dan(p) outlines a similar approach to Suzanna(p) in resisting _jumping in_. "I try never to touch the keyboard of who's there. If they are stuck on something I always tell them what to do." This approach is  guided influenced by Dan's experience as a software engineer and volunteer at Coder Dojo (gly).
-
-This example sees Dan(p) shifting the kind of helping role as he progresses through different stages of applying a GDP.
-
-Molly continues to do solo design using the Piskel graphical too. She encounters a design problem. When erasing a part of the design she gets rid of background colour. Molly asks for help from partner but receives misleading advice which does not help her progress.
-Molly:  Oh no it’s not done that has it?
-
-Molly calls the name of her child across room with theatrical gesture and loud whisper voice
-Molly: “Nadine !”
-Molly then makes face, wiggles head and shrugs at parent peer. The other parent laughs.
-Nadine arrives to help. -->
+While the helping pattern of accessing the repetoire of researching and accessing technical documentation is available to all pairs, due to the level of skill and experience involved, other technical processes are developed by most participants and are explored in the next section.
 
 
 <!-- Nadine uses the mouse to select the grey background colour with the colour picker tool, then the pen tool to fill in gaps in the design. She then swaps the active colour back from grey to black by clicking the option to swap foreground and background colours.
@@ -589,7 +573,7 @@ Molly: Oh X. Alright Bubs. Thanks. -->
 
 <!-- NOTE - this is a secondary examples - where GDPs as a concept are not vital. -->
 
-While the helping pattern of accessing the repetoire of researching and accessing technical documentation is available to all pairs, due to the level of skill and experience involved, other technical processes are developed by most participants and are explored in the next section.
+
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONThTENT -->
 
